@@ -2182,97 +2182,97 @@
         shown.</td>
     </tr>
 
-  <tr>
-    <td><pre>-audio.enabled &lt;1|0&gt;</pre></td>
-    <td>Enable or disable sound generation.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.enabled &lt;1|0&gt;</pre></td>
+      <td>Enable or disable sound generation.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.volume &lt;0 - 100&gt;</pre></td>
-    <td>Set the volume.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.volume &lt;0 - 100&gt;</pre></td>
+      <td>Set the volume.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.device &lt;number&gt;</pre></td>
-    <td>Set the audio device (0 = default).</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.device &lt;number&gt;</pre></td>
+      <td>Set the audio device (0 = default).</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.preset &lt;1 - 5&gt;</pre></td>
-    <td>Set an audio preset. Numbers in sequence represent presets for
-    'custom', 'low quality, medium lag', 'high quality, medium lag',
-    'high quality, low lag' and 'ultra quality, minimal lag'.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.preset &lt;1 - 5&gt;</pre></td>
+      <td>Set an audio preset. Numbers in sequence represent presets for
+      'custom', 'low quality, medium lag', 'high quality, medium lag',
+      'high quality, low lag' and 'ultra quality, minimal lag'.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.fragment_size &lt;128|256|512|1024|2048|4096&gt;</pre></td>
-    <td>Set the number of samples in a single fragment processed by the audio driver.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.fragment_size &lt;128|256|512|1024|2048|4096&gt;</pre></td>
+      <td>Set the number of samples in a single fragment processed by the audio driver.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.sample_rate &lt;44100|48000|96000&gt;</pre></td>
-    <td>Set sound sample output frequency.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.sample_rate &lt;44100|48000|96000&gt;</pre></td>
+      <td>Set sound sample output frequency.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.resampling_quality &lt;1|2|3&gt;</pre></td>
-    <td>Set resampling quality to low (1), high (2) or ultra (3).</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.resampling_quality &lt;1|2|3&gt;</pre></td>
+      <td>Set resampling quality to low (1), high (2) or ultra (3).</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.headroom &lt;0 - 20&gt;</pre></td>
-    <td>Set number of additional half-frames to prebuffer.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.headroom &lt;0 - 20&gt;</pre></td>
+      <td>Set number of additional half-frames to prebuffer.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.buffer_size &lt;0 - 20&gt;</pre></td>
-    <td>Set maximum number of additional half-frames to buffer.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.buffer_size &lt;0 - 20&gt;</pre></td>
+      <td>Set maximum number of additional half-frames to buffer.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.stereo &lt;1|0&gt;</pre></td>
-    <td>Enable or disable stereo mode for all ROMs.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.stereo &lt;1|0&gt;</pre></td>
+      <td>Enable or disable stereo mode for all ROMs.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-audio.dpc_pitch &lt;10000 - 30000&gt;</pre></td>
-    <td>Set the pitch of Pitfall II music.</td>
-  </tr>
+    <tr>
+      <td><pre>-audio.dpc_pitch &lt;10000 - 30000&gt;</pre></td>
+      <td>Set the pitch of Pitfall II music.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.zoom &lt;zoom&gt;</pre></td>
-    <td>Use the specified zoom level (integer) while in TIA/emulation mode.
-    </td>
-  </tr>
+    <tr>
+      <td><pre>-tia.zoom &lt;zoom&gt;</pre></td>
+      <td>Use the specified zoom level (integer) while in TIA/emulation mode.
+      </td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.vsizeadjust &lt;-5 - 5&gt;</pre></td>
-    <td>Adjust the display height of the TIA image
-    </td>
-  </tr>
+    <tr>
+      <td><pre>-tia.vsizeadjust &lt;-5 - 5&gt;</pre></td>
+      <td>Adjust the display height of the TIA image
+      </td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.inter &lt;1|0&gt;</pre></td>
-    <td>Use interpolation for the TIA image (results in blending/smoothing
-      of the image).</td>
-  </tr>
+    <tr>
+      <td><pre>-tia.inter &lt;1|0&gt;</pre></td>
+      <td>Use interpolation for the TIA image (results in blending/smoothing
+        of the image).</td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.fs_stretch &lt;1|0&gt;</pre></td>
-    <td>Stretch TIA image completely while in fullscreen mode, vs. keeping the correct
-      aspect ratio.</td>
-  </tr>
+    <tr>
+      <td><pre>-tia.fs_stretch &lt;1|0&gt;</pre></td>
+      <td>Stretch TIA image completely while in fullscreen mode, vs. keeping the correct
+        aspect ratio.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.fs_refresh &lt;1|0&gt;</pre></td>
-    <td>While in fullscreen mode, adapt the display's refresh rate to the game's frame rate
-      to minimize judder.</br>
-      Note: Not available for macOS.</td>
-  </tr>
+    <tr>
+      <td><pre>-tia.fs_refresh &lt;1|0&gt;</pre></td>
+      <td>While in fullscreen mode, adapt the display's refresh rate to the game's frame rate
+        to minimize judder.</br>
+        Note: Not available for macOS.</td>
+    </tr>
 
-  <tr>
-    <td><pre>-tia.fs_overscan &lt;0 - 10&gt;</pre></td>
-    <td>Add overscan to TIA image while in fullscreen mode</td>
+    <tr>
+      <td><pre>-tia.fs_overscan &lt;0 - 10&gt;</pre></td>
+      <td>Add overscan to TIA image while in fullscreen mode</td>
     </tr>
 
     <tr>
@@ -2282,6 +2282,11 @@
         these change be changed around to apply different colours to the
         respective register.
       </td>
+    </tr>
+
+    <tr>
+      <td><pre>-tia.plain_video &lt;1|0&gt;</pre></td>
+      <td>Disable all scaling and postprocessing.</td>
     </tr>
 
     <tr>
